# ai-coding-interview-coach

./: .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  DESIGN.md  GEMINI.md  README.md  firebase.json  package-lock.json  package.json
.agent/rules/: agent_interaction_policy.md  ai_champion_context.md  commit-workflow.md  design-mandate.md  project_context.md  proposal_guidelines.md
.claude/: settings.json
.claude/rules/: code-quality.md  commit.md  workflow.md
.codex/: hooks.json
.codex/checklists/: proposal-review.md
.codex/context/: project.md
.codex/hooks/: gate_common.py  render_hooks.py  session_start_policy.py  settings.toml  stop_require_validation.py
.codex/templates/: implementation-plan.md
.codex/workflows/: commit-policy.md  docs-authoring.md  execution-policy.md
.github/workflows/: verify.yml
apps/api/: .env.example  pyproject.toml
apps/api/app/: __init__.py  config.py  main.py  models.py  session_store.py
apps/api/app/routers/: __init__.py  problems.py  reports.py  sessions.py
apps/api/app/services/: ast_analysis.py  interview_engine.py  judge0_client.py  llm_service.py  problem_loader.py
apps/api/tests/: conftest.py  test_codex_hooks.py  test_health.py  test_interview_engine.py  test_llm_service.py  test_problems.py  test_session_store.py  test_sessions.py
apps/web/: package.json  (+5 more)
docs/: current_implementation_status.md  demo_positioning.md  demo_script.md  platform_plan.md  platform_plan_analysis.md  platform_plan_v2.md  proposal_template.md  qa_plan.md  site_validation.md  validation_interview_script.md  구현_수정안.md  구현_제안서.md
(+172 files in other folders)
